WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283622
REGRESSION(
279943@main
): [GStreamer][MSE] Infinite recursion when pausing the player
https://bugs.webkit.org/show_bug.cgi?id=283622
Summary
REGRESSION(279943@main): [GStreamer][MSE] Infinite recursion when pausing the...
Philippe Normand
Reported
2024-11-23 01:55:37 PST
https://build.webkit.org/results/GTK-Linux-64-bit-Debug-Tests/286997@main%20(14910)/imported/w3c/web-platform-tests/media-source/mediasource-duration-crash-log.txt
#1000 0x00007ff604f5da11 in WebCore::MediaPlayerPrivateGStreamerMSE::pause() (this=0x7ff5db816900) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:183 #1001 0x00007ff604d4220a in WebCore::MediaPlayer::pause() (this=0x7ff5db3e1140) at /app/webkit/Source/WebCore/platform/graphics/MediaPlayer.cpp:728 #1002 0x00007ff603e5219e in WebCore::HTMLMediaElement::pausePlayer() (this=0x7ff49d122c00) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:6511 #1003 0x00007ff603e51edc in WebCore::HTMLMediaElement::updatePlayState() (this=0x7ff49d122c00) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:6444 #1004 0x00007ff603e46a7c in WebCore::HTMLMediaElement::playInternal() (this=0x7ff49d122c00) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:4432 #1005 0x00007ff603e4fe18 in WebCore::HTMLMediaElement::mediaPlayerPlaybackStateChanged() (this=0x7ff49d122c00) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:6023 #1006 0x00007ff604d4409b in WebCore::MediaPlayer::playbackStateChanged() (this=0x7ff5db3e1140) at /app/webkit/Source/WebCore/platform/graphics/MediaPlayer.cpp:1506 #1007 0x00007ff604f5da11 in WebCore::MediaPlayerPrivateGStreamerMSE::pause() (this=0x7ff5db816900) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:183
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-11-23 02:23:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37075
EWS
Comment 2
2024-11-25 00:56:33 PST
Committed
287055@main
(33adf31f1891): <
https://commits.webkit.org/287055@main
> Reviewed commits have been landed. Closing PR #37075 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-25 00:57:13 PST
<
rdar://problem/140530795
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug