REGRESSION(279943@main): [GStreamer][MSE] Infinite recursion when pausing the player https://bugs.webkit.org/show_bug.cgi?id=283622

Reviewed by Jean-Yves Avenard.

Exit early from the pause method in case the player is already paused, in order to prevent an
infinite recursion triggered by the call to player->playbackStateChanged() that would make the media
element call pause() again, and so on.

* Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::pause):

Canonical link: https://commits.webkit.org/287055@main